// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Modale _CentraturaVerticale 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale _Dimensioni 1`] = `
<div>
  <div>
    <div>
      <button
        class="me-3 btn btn-primary"
        type="button"
      >
        Modale grande
      </button>
      <button
        class="btn btn-primary"
        type="button"
      >
        Modale piccola
      </button>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale _EsempioBase 1`] = `
<div>
  <div>
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-header"
      >
        <h5
          class="modal-title"
        >
          Titolo della modale
        </h5>
      </div>
      <div
        class="modal-body"
      >
        Il testo del corpo della modale va qui.
      </div>
      <div
        class="modal-footer"
      >
        <button
          class="btn btn-secondary"
        >
          Chiudi
        </button>
        <button
          class="btn btn-primary"
        >
          Salva le modifiche
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale AllineamentoADestra 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale a destra
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale AllineamentoASinistra 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale a sinistra
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleBase 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleBaseConBottoneChiusura 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Mostra modale con bottone di chiusura
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleConContenutoScrollabile 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia modale con contenuto scrollabile
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleConFormInputs 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia modale con form
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleConIcona 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia modale con icona
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModaleConLinkList 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia modale con LinkList
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ModalePopConfirm 1`] = `
<div>
  <div>
    <button
      class="me-3 btn btn-primary"
      type="button"
    >
      Lancia modale pop-confirm base
    </button>
    <button
      class="me-3 btn btn-primary"
      type="button"
    >
      Lancia modale pop-confirm con titolo
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale RimuovereLanimazione 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Modale ScrollDiContenutiLunghi 1`] = `
<div>
  <div>
    <button
      class="btn btn-primary"
      type="button"
    >
      Lancia la demo della modale scrollabile
    </button>
  </div>
</div>
`;
